--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,18 +45,21 @@
 
 /* Loader styles  */
 
-.loader {
-  position: relative;
+#loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 78px;
   height: 78px;
   border-radius: 50%;
-  box-sizing: border-box;
   background: #fff;
   border: 8px solid #131a1d;
   overflow: hidden;
   box-sizing: border-box;
 }
-.loader::after {
+
+#loader::after {
   content: '';
   position: absolute;
   left: 0;
@@ -69,7 +72,8 @@
   box-sizing: border-box;
   animation: eyeShade 3s infinite;
 }
-.loader::before {
+
+#loader::before {
   content: '';
   position: absolute;
   left: 20px;
@@ -81,6 +85,7 @@
   border-radius: 50%;
   animation: eyeMove 3s infinite;
 }
+
 @keyframes eyeShade {
   0% {
     transform: translateY(0);
@@ -102,6 +107,7 @@
     transform: translateY(10px);
   }
 }
+
 @keyframes eyeMove {
   0% {
     transform: translate(0, 0);
